# chain-of-action

./: .gitignore  README.md  pyproject.toml
examples/: salary_analysis.py
src/core/: action_type.py  advisor.py  context.py  engine.py
src/llm/: base.py  claude.py
src/monitoring/: tracker.py
tests/: test_core.py  test_integration.py
tools/: mcp_server.py
