[project]
name = "chain-of-action"
version = "0.1.0"
description = "Soft action guidance framework — classifies LLM behaviors and recommends (not forces) downstream actions"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call real LLM APIs",
]
